@@ -52,6 +52,11 @@
 		</SPAN>
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE"
 			DELEGATE="LITERAL">
+			<BEGIN>SBUF" </BEGIN>
+			<END>"</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE"
+			DELEGATE="LITERAL">
 			<BEGIN>"</BEGIN>
 			<END>"</END>
 		</SPAN>
